Version 0.1 - 21 December 2014
    - First stable version, public release

Version 0.2 - 26 January 2015
    - Minor fixes
    - Added prime-number related functions in number_theory.h:
            qpp::factors() - prime factors of positive integer
            qpp::isprime() - primality test

Version 0.3 - 15 February 2015
    - Added qpp::internal::Singleton<T>::get_thread_local_instance()

Version 0.3.1 - development
    - Added noexcept specification where suitable
    - Added new functions in functions.h: 
            qpp::complement() - computes the complement of a subsystem vector
    - Added overloads of qpp::ptrace1(), qpp::ptrace2(), qpp::ptrace() and
      qpp::ptranspose() that allow a pure state input, as it was the case
      before with qpp::syspermute().