@@ -36,6 +36,113 @@ namespace qpp
 namespace experimental
 {
 
+// sequential partial measurements
+/**
+* \brief Sequentially measures the part \a subsys
+* of the multi-partite state vector or density matrix \a A
+* in the computational basis
+* \see qpp::measure()
+*
+* \param A Eigen expression
+* \param subsys Subsystem indexes that are measured
+* \param dims Dimensions of the multi-partite system
+* \return Tuple of: 1. Vector of outcome results of the
+* measurement, 2. Outcome probability, and 3. Post-measurement normalized state
+*/
+template<typename Derived>
+std::tuple<std::vector<idx>, double, cmat>
+measure_seq(
+        const Eigen::MatrixBase<Derived>& A,
+        std::vector<idx> subsys,
+        std::vector<idx> dims)
+{
+    const cmat& rA = A;
+
+    // EXCEPTION CHECKS
+
+    // check zero-size
+    if (!internal::_check_nonzero_size(rA))
+        throw Exception("qpp::measure_seq()", Exception::Type::ZERO_SIZE);
+
+    // check that dimension is valid
+    if (!internal::_check_dims(dims))
+        throw Exception("qpp::measure_seq()", Exception::Type::DIMS_INVALID);
+
+    // check that dims match rho matrix
+    if (!internal::_check_dims_match_mat(dims, rA))
+        throw Exception("qpp::measure_seq()",
+                Exception::Type::DIMS_MISMATCH_MATRIX);
+
+    // check subsys is valid w.r.t. dims
+    if (!internal::_check_subsys_match_dims(subsys, dims))
+        throw Exception("qpp::measure_seq()",
+                Exception::Type::SUBSYS_MISMATCH_DIMS);
+
+    // END EXCEPTION CHECKS
+
+    std::vector<idx> result;
+    double prob = 1;
+    cmat outstate = rA;
+
+    // sort subsys in decreasing order
+    std::sort(std::begin(subsys), std::end(subsys), std::greater<idx>());
+
+    //************ density matrix or column vector ************//
+    if (internal::_check_square_mat(rA) || internal::_check_col_vector(rA))
+    {
+        while (subsys.size() > 0)
+        {
+            auto tmp = measure(outstate, gt.Id(dims.at(subsys.at(0))),
+                    {subsys.at(0)}, dims);
+            result.push_back(std::get<0>(tmp));
+            prob *= std::get<1>(tmp).at(std::get<0>(tmp));
+            outstate = std::get<2>(tmp).at(std::get<0>(tmp));
+
+            // remove the subsystem
+            dims.erase(std::next(dims.begin(), subsys.at(0)));
+            subsys.erase(subsys.begin());
+        }
+    }
+    else
+        throw Exception("qpp::measure_seq()",
+                Exception::Type::MATRIX_NOT_SQUARE_OR_CVECTOR);
+
+    return std::make_tuple(result, prob, outstate);
+}
+
+// sequential partial measurements
+/**
+* \brief Sequentially measures the part \a subsys
+* of the multi-partite state vector or density matrix \a A
+* in the computational basis
+* \see qpp::measure()
+*
+* \param A Eigen expression
+* \param subsys Subsystem indexes that are measured
+* \param d Subsystem dimensions
+* \return Tuple of: 1. Vector of measurement outcomes, 2.
+* Outcome probability, and 3. Post-measurement normalized state
+*/
+template<typename Derived>
+std::tuple<std::vector<idx>, double, cmat>
+measure_seq(
+        const Eigen::MatrixBase<Derived>& A,
+        std::vector<idx> subsys, idx d = 2)
+{
+    const cmat& rA = A;
+
+    // check zero size
+    if (!internal::_check_nonzero_size(rA))
+        throw Exception("qpp::measure_seq()", Exception::Type::ZERO_SIZE);
+
+    idx n =
+            static_cast<idx>(std::llround(std::log2(rA.rows()) /
+                    std::log2(d)));
+    std::vector<idx> dims(n, d); // local dimensions vector
+
+    return measure_seq(rA, subsys, dims);
+}
+
 } /* namespace experimental */
 } /* namespace qpp */
 
