@@ -30,20 +30,156 @@
 // measurements
 namespace qpp
 {
+// full measurements
+/**
+* \brief Measures the state \a A using the set of Kraus operators \a Ks
+*
+* \param A Eigen expression
+* \param Ks Set of Kraus operators
+* \return Tuple of: 1. Result of the measurement, 2.
+* Vector of outcome probabilities, and 3. Vector of post-measurement
+* normalized states
+*/
+template<typename Derived>
+std::tuple<idx, std::vector<double>, std::vector<cmat>> measure(
+        const Eigen::MatrixBase<Derived>& A, const std::vector<cmat>& Ks)
+{
+    const dyn_mat<typename Derived::Scalar>& rA = A;
+
+    // EXCEPTION CHECKS
+    // check zero-size
+    if (!internal::_check_nonzero_size(rA))
+        throw Exception("qpp::measure()", Exception::Type::ZERO_SIZE);
+
+    // check the Kraus operators
+    if (Ks.size() == 0)
+        throw Exception("qpp::measure()", Exception::Type::ZERO_SIZE);
+    if (!internal::_check_square_mat(Ks[0]))
+        throw Exception("qpp::measure()", Exception::Type::MATRIX_NOT_SQUARE);
+    if (Ks[0].rows() != rA.rows())
+        throw Exception("qpp::measure()",
+                Exception::Type::DIMS_MISMATCH_MATRIX);
+    for (auto&& it : Ks)
+        if (it.rows() != Ks[0].rows() || it.cols() != Ks[0].rows())
+            throw Exception("qpp::measure()", Exception::Type::DIMS_NOT_EQUAL);
+    // END EXCEPTION CHECKS
+
+    // probabilities
+    std::vector<double> prob(Ks.size());
+    // resulting states
+    std::vector<cmat> outstates(Ks.size());
+
+    //************ density matrix ************//
+    if (internal::_check_square_mat(rA)) // square matrix
+    {
+        for (idx i = 0; i < Ks.size(); ++i)
+        {
+            outstates[i] = cmat::Zero(rA.rows(), rA.rows());
+            cmat tmp = Ks[i] * rA * adjoint(Ks[i]); // un-normalized;
+            prob[i] = std::abs(trace(tmp)); // probability
+            if (prob[i] > eps)
+                outstates[i] = tmp / prob[i]; // normalized
+        }
+    }
+        //************ ket ************//
+    else if (internal::_check_col_vector(rA)) // column vector
+    {
+        for (idx i = 0; i < Ks.size(); ++i)
+        {
+            outstates[i] = ket::Zero(rA.rows());
+            ket tmp = Ks[i] * rA; // un-normalized;
+            // probability
+            prob[i] = std::pow(norm(tmp), 2);
+            if (prob[i] > eps)
+                outstates[i] = tmp / std::sqrt(prob[i]); // normalized
+        }
+    }
+    else
+        throw Exception("qpp::measure()",
+                Exception::Type::MATRIX_NOT_SQUARE_OR_CVECTOR);
+
+    // sample from the probability distribution
+    std::discrete_distribution<idx> dd(std::begin(prob),
+            std::end(prob));
+    idx result = dd(RandomDevices::get_instance()._rng);
+
+    return std::make_tuple(result, prob, outstates);
+}
+
+// std::initializer_list overload, avoids ambiguity for 2-element lists, see
+// http://stackoverflow.com
+// /questions/26750039/ambiguity-when-using-initializer-list-as-parameter
+/**
+* \brief Measures the state \a A using the set of Kraus operators \a Ks
+*
+* \param A Eigen expression
+* \param Ks Set of Kraus operators
+* \return Tuple of: 1. Result of the measurement, 2.
+* Vector of outcome probabilities, and 3. Vector of post-measurement
+* normalized states
+*/
+template<typename Derived>
+std::tuple<idx, std::vector<double>, std::vector<cmat>> measure(
+        const Eigen::MatrixBase<Derived>& A,
+        const std::initializer_list<cmat>& Ks)
+{
+    return measure(A, std::vector<cmat>(Ks));
+}
+
+/**
+* \brief Measures the state \a A in the orthonormal basis
+* specified by the unitary matrix \a U
+*
+* \param A Eigen expression
+* \param U Unitary matrix whose columns represent the measurement basis vectors
+* \return Tuple of: 1. Result of the measurement, 2.
+* Vector of outcome probabilities, and 3. Vector of post-measurement
+* normalized states
+*/
+template<typename Derived>
+std::tuple<idx, std::vector<double>, std::vector<cmat>> measure(
+        const Eigen::MatrixBase<Derived>& A, const cmat& U)
+{
+    const dyn_mat<typename Derived::Scalar>& rA = A;
+
+    // EXCEPTION CHECKS
+    // check zero-size
+    if (!internal::_check_nonzero_size(rA))
+        throw Exception("qpp::measure()", Exception::Type::ZERO_SIZE);
+
+    // check the unitary basis matrix U
+    if (!internal::_check_nonzero_size(U))
+        throw Exception("qpp::measure()", Exception::Type::ZERO_SIZE);
+    if (!internal::_check_square_mat(U))
+        throw Exception("qpp::measure()", Exception::Type::MATRIX_NOT_SQUARE);
+    if (U.rows() != rA.rows())
+        throw Exception("qpp::measure()",
+                Exception::Type::DIMS_MISMATCH_MATRIX);
+    // END EXCEPTION CHECKS
+
+    std::vector<cmat> Ks(U.rows());
+    for (idx i = 0; i < static_cast<idx>(U.rows()); i++)
+        Ks[i] = U.col(i) * adjoint(U.col(i));
+
+    return measure(rA, Ks);
+}
+
 // partial measurements
 /**
 * \brief  Measures the part \a subsys of
 * the multi-partite state vector or density matrix \a A
 * using the set of Kraus operators \a Ks
+* \see qpp::measure_seq()
 *
 * \note The dimension of all \a Ks must match the dimension of \a subsys.
+* The measurement is destructive, i.e. the measured subsystems are traced away.
 *
 * \param A Eigen expression
 * \param Ks Set of Kraus operators
 * \param subsys Subsystem indexes that are measured
 * \param dims Dimensions of the multi-partite system
-* \return Tuple consisting of 1. Result of the measurement, 2.
-* Vector of outcome probabilities and 3. Vector of post-measurement
+* \return Tuple of: 1. Result of the measurement, 2.
+* Vector of outcome probabilities, and 3. Vector of post-measurement
 * normalized states
 */
 template<typename Derived>
@@ -75,6 +211,10 @@ measure(
     if (!internal::_check_subsys_match_dims(subsys, dims))
         throw Exception("qpp::measure()",
                 Exception::Type::SUBSYS_MISMATCH_DIMS);
+
+    // we have a full measurement
+//    if (subsys.size() == dims.size())
+//        return measure(rA, Ks);
 
     std::vector<idx> subsys_dims(subsys.size());
     for (idx i = 0; i < subsys.size(); ++i)
@@ -158,15 +298,17 @@ measure(
 * \brief  Measures the part \a subsys of
 * the multi-partite state vector or density matrix \a A
 * using the set of Kraus operators \a Ks
+* \see qpp::measure_seq()
 *
 * \note The dimension of all \a Ks must match the dimension of \a subsys.
+* The measurement is destructive, i.e. the measured subsystems are traced away.
 *
 * \param A Eigen expression
 * \param subsys Subsystem indexes that are measured
 * \param dims Dimensions of the multi-partite system
 * \param Ks Set of Kraus operators
-* \return Tuple consisting of 1. Result of the measurement, 2.
-* Vector of outcome probabilities and 3. Vector of post-measurement
+* \return Tuple of: 1. Result of the measurement, 2.
+* Vector of outcome probabilities, and 3. Vector of post-measurement
 * normalized states
 */
 template<typename Derived>
@@ -184,15 +326,17 @@ measure(
 * \brief  Measures the part \a subsys of
 * the multi-partite state vector or density matrix \a A
 * using the set of Kraus operators \a Ks
+* \see qpp::measure_seq()
 *
 * \note The dimension of all \a Ks must match the dimension of \a subsys.
+* The measurement is destructive, i.e. the measured subsystems are traced away.
 *
 * \param A Eigen expression
 * \param subsys Subsystem indexes that are measured
 * \param d Subsystem dimensions
 * \param Ks Set of Kraus operators
-* \return Tuple consisting of 1. Result of the measurement, 2.
-* Vector of outcome probabilities and 3. Vector of post-measurement
+* \return Tuple of: 1. Result of the measurement, 2.
+* Vector of outcome probabilities, and 3. Vector of post-measurement
 * normalized states
 */
 template<typename Derived>
@@ -224,15 +368,17 @@ measure(
 * \brief  Measures the part \a subsys of
 * the multi-partite state vector or density matrix \a A
 * using the set of Kraus operators \a Ks
+* \see qpp::measure_seq()
 *
 * \note The dimension of all \a Ks must match the dimension of \a subsys.
+* The measurement is destructive, i.e. the measured subsystems are traced away.
 *
 * \param A Eigen expression
 * \param subsys Subsystem indexes that are measured
 * \param d Subsystem dimensions
 * \param Ks Set of Kraus operators
-* \return Tuple consisting of 1. Result of the measurement, 2.
-* Vector of outcome probabilities and 3. Vector of post-measurement
+* \return Tuple of: 1. Result of the measurement, 2.
+* Vector of outcome probabilities, and 3. Vector of post-measurement
 * normalized states
 */
 template<typename Derived>
@@ -250,15 +396,17 @@ measure(
 * \brief Measures the part \a subsys of
 * the multi-partite state vector or density matrix \a A
 * in the orthonormal basis specified by the unitary matrix \a U
+* \see qpp::measure_seq()
 *
 * \note The dimension of \a U must match the dimension of \a subsys.
+* The measurement is destructive, i.e. the measured subsystems are traced away.
 *
 * \param A Eigen expression
 * \param subsys Subsystem indexes that are measured
 * \param dims Dimensions of the multi-partite system
 * \param U Unitary matrix whose columns represent the measurement basis vectors
-* \return Tuple consisting of 1. Result of the measurement, 2.
-* Vector of outcome probabilities and 3. Vector of post-measurement
+* \return Tuple of: 1. Result of the measurement, 2.
+* Vector of outcome probabilities, and 3. Vector of post-measurement
 * normalized states
 */
 template<typename Derived>
@@ -318,15 +466,17 @@ measure(
 * \brief Measures the part \a subsys of
 * the multi-partite state vector or density matrix \a A\ in the orthonormal
 * basis specified by the unitary matrix \a U
+* \see qpp::measure_seq()
 *
 * \note The dimension of \a U must match the dimension of \a subsys.
+* The measurement is destructive, i.e. the measured subsystems are traced away.
 *
 * \param A Eigen expression
 * \param subsys Subsystem indexes that are measured
 * \param d Subsystem dimensions
 * \param U Unitary matrix whose columns represent the measurement basis vectors
-* \return Tuple consisting of 1. Result of the measurement, 2.
-* Vector of outcome probabilities and 3. Vector of post-measurement
+* \return Tuple of: 1. Result of the measurement, 2.
+* Vector of outcome probabilities, and 3. Vector of post-measurement
 * normalized states
 */
 template<typename Derived>
@@ -349,140 +499,6 @@ measure(
     std::vector<idx> dims(n, d); // local dimensions vector
 
     return measure(rA, U, subsys, dims);
-}
-
-// full measurements
-/**
-* \brief Measures the state \a A using the set of Kraus operators \a Ks
-*
-* \param A Eigen expression
-* \param Ks Set of Kraus operators
-* \return Tuple consisting of 1. Result of the measurement, 2.
-* Vector of outcome probabilities and 3. Vector of post-measurement
-* normalized states
-*/
-template<typename Derived>
-std::tuple<idx, std::vector<double>, std::vector<cmat>> measure(
-        const Eigen::MatrixBase<Derived>& A, const std::vector<cmat>& Ks)
-{
-    const dyn_mat<typename Derived::Scalar>& rA = A;
-
-    // EXCEPTION CHECKS
-    // check zero-size
-    if (!internal::_check_nonzero_size(rA))
-        throw Exception("qpp::measure()", Exception::Type::ZERO_SIZE);
-
-    // check the Kraus operators
-    if (Ks.size() == 0)
-        throw Exception("qpp::measure()", Exception::Type::ZERO_SIZE);
-    if (!internal::_check_square_mat(Ks[0]))
-        throw Exception("qpp::measure()", Exception::Type::MATRIX_NOT_SQUARE);
-    if (Ks[0].rows() != rA.rows())
-        throw Exception("qpp::measure()",
-                Exception::Type::DIMS_MISMATCH_MATRIX);
-    for (auto&& it : Ks)
-        if (it.rows() != Ks[0].rows() || it.cols() != Ks[0].rows())
-            throw Exception("qpp::measure()", Exception::Type::DIMS_NOT_EQUAL);
-    // END EXCEPTION CHECKS
-
-    // probabilities
-    std::vector<double> prob(Ks.size());
-    // resulting states
-    std::vector<cmat> outstates(Ks.size());
-
-    //************ density matrix ************//
-    if (internal::_check_square_mat(rA)) // square matrix
-    {
-        for (idx i = 0; i < Ks.size(); ++i)
-        {
-            outstates[i] = cmat::Zero(rA.rows(), rA.rows());
-            cmat tmp = Ks[i] * rA * adjoint(Ks[i]); // un-normalized;
-            prob[i] = std::abs(trace(tmp)); // probability
-            if (prob[i] > eps)
-                outstates[i] = tmp / prob[i]; // normalized
-        }
-    }
-        //************ ket ************//
-    else if (internal::_check_col_vector(rA)) // column vector
-    {
-        for (idx i = 0; i < Ks.size(); ++i)
-        {
-            outstates[i] = ket::Zero(rA.rows());
-            ket tmp = Ks[i] * rA; // un-normalized;
-            // probability
-            prob[i] = std::pow(norm(tmp), 2);
-            if (prob[i] > eps)
-                outstates[i] = tmp / std::sqrt(prob[i]); // normalized
-        }
-    }
-    else
-        throw Exception("qpp::measure()",
-                Exception::Type::MATRIX_NOT_SQUARE_OR_CVECTOR);
-
-    // sample from the probability distribution
-    std::discrete_distribution<idx> dd(std::begin(prob),
-            std::end(prob));
-    idx result = dd(RandomDevices::get_instance()._rng);
-
-    return std::make_tuple(result, prob, outstates);
-}
-
-// std::initializer_list overload, avoids ambiguity for 2-element lists, see
-// http://stackoverflow.com
-// /questions/26750039/ambiguity-when-using-initializer-list-as-parameter
-/**
-* \brief Measures the state \a A using the set of Kraus operators \a Ks
-*
-* \param A Eigen expression
-* \param Ks Set of Kraus operators
-* \return Tuple consisting of 1. Result of the measurement, 2.
-* Vector of outcome probabilities and 3. Vector of post-measurement
-* normalized states
-*/
-template<typename Derived>
-std::tuple<idx, std::vector<double>, std::vector<cmat>> measure(
-        const Eigen::MatrixBase<Derived>& A,
-        const std::initializer_list<cmat>& Ks)
-{
-    return measure(A, std::vector<cmat>(Ks));
-}
-
-/**
-* \brief Measures the state \a A in the orthonormal basis
-* specified by the unitary matrix \a U
-*
-* \param A Eigen expression
-* \param U Unitary matrix whose columns represent the measurement basis vectors
-* \return Tuple consisting of 1. Result of the measurement, 2.
-* Vector of outcome probabilities and 3. Vector of post-measurement
-* normalized states
-*/
-template<typename Derived>
-std::tuple<idx, std::vector<double>, std::vector<cmat>> measure(
-        const Eigen::MatrixBase<Derived>& A, const cmat& U)
-{
-    const dyn_mat<typename Derived::Scalar>& rA = A;
-
-    // EXCEPTION CHECKS
-    // check zero-size
-    if (!internal::_check_nonzero_size(rA))
-        throw Exception("qpp::measure()", Exception::Type::ZERO_SIZE);
-
-    // check the unitary basis matrix U
-    if (!internal::_check_nonzero_size(U))
-        throw Exception("qpp::measure()", Exception::Type::ZERO_SIZE);
-    if (!internal::_check_square_mat(U))
-        throw Exception("qpp::measure()", Exception::Type::MATRIX_NOT_SQUARE);
-    if (U.rows() != rA.rows())
-        throw Exception("qpp::measure()",
-                Exception::Type::DIMS_MISMATCH_MATRIX);
-    // END EXCEPTION CHECKS
-
-    std::vector<cmat> Ks(U.rows());
-    for (idx i = 0; i < static_cast<idx>(U.rows()); i++)
-        Ks[i] = U.col(i) * adjoint(U.col(i));
-
-    return measure(rA, Ks);
 }
 
 } /* namespace qpp */
